--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Pixyll</title>
+    <title>Datalove</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="A simple, beautiful theme for Jekyll that emphasizes content rather than aesthetic fluff.">
-    <meta name="author" content="John Otander">
+    <meta name="description" content="Oh for the love of data!">
+    <meta name="author" content="Tommy O'Dell">
     
     <link rel="canonical" href="http://datalove.org/">
 
@@ -22,10 +22,10 @@
     <!-- From: https://github.com/mmistakes/hpstr-jekyll-theme/blob/master/_includes/head.html -->
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="article">
-    <meta property="og:title" content="Pixyll">
-    <meta property="og:description" content="A simple, beautiful theme for Jekyll that emphasizes content rather than aesthetic fluff.">
+    <meta property="og:title" content="Datalove">
+    <meta property="og:description" content="Oh for the love of data!">
     <meta property="og:url" content="http://datalove.org/">
-    <meta property="og:site_name" content="Pixyll">
+    <meta property="og:site_name" content="Datalove">
 
     <!-- Icons -->
     <link rel="apple-touch-icon" sizes="57x57" href="apple-touch-icon-57x57.png">
@@ -44,12 +44,12 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
 </head>
 
-<body class="">
+<body class="animated fade-in-down">
   <div class="site-wrap">
     <header class="site-header px2 px-responsive">
   <div class="mt2 wrap">
     <div class="measure">
-      <a href="http://datalove.org" class="site-title">Pixyll</a>
+      <a href="http://datalove.org" class="site-title">Datalove</a>
       <nav class="site-nav right">
         <a href="/about/">About</a>
 <a href="/contact/">Contact</a>
